Bug 931802 - [bluedroid] Support DeviceFound/DiscoveryStateChange callback, r=echou